@@ -17,14 +17,15 @@ import com.farao_community.farao.data.crac_creation.creator.cim.crac_creator.rem
 import com.farao_community.farao.data.crac_creation.creator.cim.crac_creator.remedial_action.RemedialActionSeriesCreationContext;
 import com.farao_community.farao.data.rao_result_api.ComputationStatus;
 import com.farao_community.farao.data.rao_result_api.RaoResult;
-import com.farao_community.farao.data.rao_result_impl.RaoResultImpl;
-import com.farao_community.farao.data.swe_cne_exporter.xsd.*;
-import com.farao_community.farao.monitoring.angle_monitoring.RaoResultWithAngleMonitoring;
+import com.farao_community.farao.data.swe_cne_exporter.xsd.RemedialActionRegisteredResource;
+import com.farao_community.farao.data.swe_cne_exporter.xsd.RemedialActionSeries;
 import org.apache.commons.lang3.NotImplementedException;
 
 import java.math.BigDecimal;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Objects;
 
 import static com.farao_community.farao.data.cne_exporter_commons.CneConstants.*;
 
@@ -48,8 +49,8 @@ public class SweRemedialActionSeriesCreator {
         List<RemedialActionSeriesCreationContext> sortedRas = cracCreationContext.getRemedialActionSeriesCreationContexts().stream()
             .filter(RemedialActionSeriesCreationContext::isImported)
             .sorted(Comparator.comparing(RemedialActionSeriesCreationContext::getNativeId))
-            .collect(Collectors.toList());
-        if (Objects.isNull(contingency)) {
+            .toList();
+        if (contingency == null) {
             //PREVENTIVE
             sortedRas.forEach(
                 raSeriesCreationContext -> {
@@ -87,8 +88,8 @@ public class SweRemedialActionSeriesCreator {
         List<RemedialActionSeriesCreationContext> sortedRas = cracCreationContext.getRemedialActionSeriesCreationContexts().stream()
             .filter(RemedialActionSeriesCreationContext::isImported)
             .sorted(Comparator.comparing(RemedialActionSeriesCreationContext::getNativeId))
-            .collect(Collectors.toList());
-        if (Objects.isNull(contingency)) {
+            .toList();
+        if (contingency == null) {
             //PREVENTIVE
             sortedRas.forEach(
                 raSeriesCreationContext -> {
@@ -132,19 +133,12 @@ public class SweRemedialActionSeriesCreator {
         RaoResult raoResult = sweCneHelper.getRaoResult();
         Crac crac = sweCneHelper.getCrac();
         List<RemedialAction<?>> usedRas = new ArrayList<>();
-        if (Objects.isNull(raoResult)) {
+        if (raoResult == null) {
             return null;
         }
         context.getCreatedIds().stream().sorted()
                 .map(crac::getRemedialAction)
-                .filter(ra -> {
-                    if (raoResult instanceof RaoResultImpl) {
-                        return raoResult.isActivatedDuringState(state, ra);
-                    } else if (raoResult instanceof RaoResultWithAngleMonitoring) {
-                        return ((RaoResultWithAngleMonitoring) raoResult).isActivatedDuringStateButNotByAngleMonitoring(state, ra);
-                    }
-                    return false;
-                }).forEach(usedRas::add);
+                .filter(ra -> raoResult.isActivatedDuringState(state, ra)).forEach(usedRas::add);
         if (!raoResult.getComputationStatus().equals(ComputationStatus.FAILURE)) {
             context.getCreatedIds().stream().sorted()
                 .map(crac::getRemedialAction).filter(ra ->
